<resources>
    <string name="app_name">Kplar</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="pref_file">in.myautodoc.preference_file</string>
    <string name="pref_login_status">in.myautodoc.preference_login_status</string>
    <string name="pref_user_name">in.myautodoc.preference_user_name</string>
    <string name="err_name">Invalid User Name</string>
    <string name="err_tel">Mobile no shouid be 10 digits</string>
    <string name="password_info">Use Capital, Small letter, Symbol, Number</string>
    <string name="info">We will send an OTP on your given mobile number</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="enter_your_received_otp">Enter Your Received OTP</string>
    <string name="if_you_haven_t_received_otp_you_can_tab_on_resend">If you haven\'t received OTP, You can tab on RESEND.</string>
    <string name="resend">RESEND</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currently_running_deals">Currently running deals</string>
    <string name="emptyONE">empty value</string>
    <string name="lorem">The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox.The quick, brown fox jumps over a The quick, brown fox jumps over a The quick, brown fox jumps over a The quick, brown fox jumps over a</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="t_and_c_apply">T \u0026 C apply</string>
    <string name="address_purpose">This address is only for shipping purpose nothing else.</string>
    <string name="st_name_rd_name_building_no"><font size="14">St. name, Rd. name, Building no.</font></string>
    <string name="district"><font size="14">District</font></string>
    <string name="pin_code"><font size="14">Pin code</font></string>
    <string name="state"><font size="14">State</font></string>
    <string name="landmark"><font size="14">Landmark</font></string>
    <string name="pref_user_id">id</string>
</resources>
